@@ -1,4 +1,5 @@
 6.5.3
+[add] 'Play (Ask for quality)' context menu
 [add] hide_folders, hide_playlists, hide_search, and hide_live to /channel/<channel_id>/ end-point
     - ie. plugin://plugin.video.youtube/channel/UC4PooiX37Pld1T8J5SYT-SQ/?hide_folders=true will hide all folders(Playlists, Search, and Live) in the channel listing
 [fix] playback for some videos (ie. music videos)
